@@ -2,26 +2,28 @@ dnl configure.in for PLplot
 dnl
 dnl Process this file with autoconf to produce a configure script.
 dnl
-dnl Copyright (C) 2001 Rafael Laboissiere
-dnl 
-dnl This file is free software; you can redistribute it and/or modify it
-dnl under the terms of the GNU General Public License as published by the
-dnl Free Software Foundation; either version 2, or (at your option) any
-dnl later version.
-dnl 
-dnl This file is distributed in the hope that it will be useful, but WITHOUT
-dnl ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
-dnl FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License
-dnl for more details.
-dnl 
-dnl You should have received a copy of the GNU General Public License
-dnl along with Octave; see the file COPYING.  If not, write to the Free
-dnl Software Foundation, 59 Temple Place - Suite 330, Boston, MA
-dnl 02111-1307, USA. 
+dnl Copyright (C) 1994 Maurice LeBrun
+dnl Copyright (C) 2002 Rafael Laboissiere
+dnl Copyright (C) 2002 Alan W. Irwin
+
+dnl This file is part of PLplot.
+
+dnl This file is free software; you can redistribute it and/or modify
+dnl it under the terms of the GNU Library General Public License as published by
+dnl the Free Software Foundation; version 2 of the License.
+
+dnl This file is distributed in the hope that it will be useful,
+dnl but WITHOUT ANY WARRANTY; without even the implied warranty of
+dnl MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+dnl GNU Library General Public License for more details.
+
+dnl You should have received a copy of the GNU Library General Public License
+dnl along with the file; if not, write to the Free Software
+dnl Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307  USA
 dnl
 dnl -----------------------------------------------------------------------
 dnl The first part of this script (between "divert(0)" and
-dnl "divert(-1)" below came from Marice LeBrun's original
+dnl "divert(-1)" below came from Maurice LeBrun's original
 dnl cf/configure.in.  It makes possible to give default values to the
 dnl configure options and set up appropriate device and driver lists.
 dnl
